--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,21 +2,51 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+ 
+  <header class="header">
+    
+    <h1><img src="images/brand.png" alt="logo instagram" class="img-instagram"></h1>
+    <a href="*" class= "login"><img src="images/home.png" alt="home image">Log in</a>
+    
 
-  Capture and Share the World's Moments
+</header>
+<secticion class="main-section">
+<div class="phone-image">
+    <img src="images/phones.png" alt="phone images">
+  </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+
+<div class="text-box">
+  
+ 
+  
+  <h2>Capture and Share the World's Moments</h2>
+
+  <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+  Oh yeah, did we mention it's free?</p>
 
+
+</div>
+<div>
+  
+</div>
+</secticion>
+
+<section>
+
+  <img src=" ../images/badge-android.png" alt=""
   Download on the App Store
   Get it on Google Play
 
+</section>
+
+<footer>
   About Us
   Support
   Blog
@@ -27,5 +57,6 @@
   Terms
 
   &copy; 2014 Instagram
+</footer>
 </body>
 </html>
