stillworking on CSS, couldn't finish on time, i will upload finished

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <div class="bg"></div> 
+  <div class="column">
+    <img src="images/phones.png" alt="phones" class="phones">
+  </div>
 
-  Capture and Share the World's Moments
+  <div class="column">
+    <img src="images/brand.png" alt="instagram" class="instagram">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <button><img src="images/home.png" alt="login">Log in</button>
+    
+    <div class="info">
+      <h2>Capture and Share the World's Moments</h2>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  Oh yeah, did we mention it's free?
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Download on the App Store
-  Get it on Google Play
+      <p>Oh yeah, did we mention it's free?</p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      <img src="images/badge-iphone.png" alt="Download on the App Store">
+      <img src="images/badge-android.png" alt="Get it on Google Play">
+    </div>
+  </div>
 
-  &copy; 2014 Instagram
+  <div class="footer">
+    <ul>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support<a></li>
+      <li><a href="#">Blog<a></li>
+      <li><a href="#">Press<a></li>
+      <li><a href="#">API<a></li>
+      <li><a href="#">Jobs<a></li>
+      <li><a href="#">Privacy<a></li>
+      <li><a href="#">Terms<a></li>
+      <li>&copy; 2014 Instagram</li>
+    </ul>
+  </div>
+
+  
 </body>
 </html>
