final commit project

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,60 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="container-background-line">
+  <div class="container">
+    <div class="container-left">
+      <img src="images/phones.png" alt="Phones" class="phones">
+    </div>
+    <div class="container-right">
+      <div class="container-right-header">
+        <img src="images/brand.png" alt="Logo Instagram" id="logo">
+        <a href="#" class="login-button"><img src="images/home.png"> Log in</a>
+      </div>
+      <div class="container-right-content">
+        <h1>Capture and Share the World's Moments</h1>
 
-  Capture and Share the World's Moments
+        <p>
+          Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with friends
+          and family.
+        </p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <p>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that
+          easy.
+          You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        </p>
+        <p>
+          Oh yeah, did we mention it's free?
+        </p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <img src="images/badge-iphone.png">
+        <img src="images/badge-android.png">
+      </div>
 
-  Oh yeah, did we mention it's free?
+    </div>
 
-  Download on the App Store
-  Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
-  &copy; 2014 Instagram
+
+
+  </div>
+      <div class="footer">
+        <ul class="footer-nav-bar">
+          <li>About Us</li>
+          <li>Support</li>
+          <li>Blog</li>
+          <li>Press</li>
+          <li>API</li>
+          <li>Jobs</li>
+          <li>Privacy</li>
+          <li>Terms</li>
+          <li><span>&copy; 2014 Instagram</span></li>
+        </ul>
+      </div>
+  </div>
 </body>
 </html>
