ya se ve un cuadro centrado con la imagen del fono

--- a/public/index.html
+++ b/public/index.html
@@ -1,40 +1,55 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-  <link rel="stylesheet" href="css/main.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link rel="stylesheet" href="css/main.css"/>
 </head>
 <body>
 
-<h1>Titulo</h1>
-dfasdfas
-Instagram  kklklklkl
+<main>
 
-Capture and Share the World's Moments
+    <div class="panFotoPrincipal">
+        <img alt ="" src="images/phones.png">
+    </div>
+    <div>
 
-Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        Instagram
 
-Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        Capture and Share the World's Moments
 
-Oh yeah, did we mention it's free?
+        Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-Download on the App Store
-Get it on Google Play
+        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that
+        easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-About Us
-Support
-Blog
-Press
-API
-Jobs
-Privacy
-Terms
+        Oh yeah, did we mention it's free?
 
-&copy; 2014 Instagram
+        Download on the App Store
+        Get it on Google Play
+
+    </div>
+
+
+
+</main>
+
+<ul class="linksFooter">
+    <li></li>
+    <li>About Us</li>
+    <li>Support</li>
+    <li>Blog</li>
+    <li>Press</li>
+    <li>API</li>
+    <li>Jobs</li>
+    <li>Privacy</li>
+    <li>Terms</li>
+
+    &copy; 2014 Instagram
+</ul>
 
 </body>
 </html>
