ya estoy en el frame , falta como 30min para terminar

--- a/public/index.html
+++ b/public/index.html
@@ -13,43 +13,64 @@
 <main>
 
     <div class="panFotoPrincipal">
-        <img alt ="" src="images/phones.png">
+        <img alt="" src="images/phones.png">
     </div>
+
     <div>
 
-        Instagram
+        <div class="panContenedorFlex panImagenesTop">
+            <h1>
+                <img src="images/brand.png" alt="Instagram"/>
+            </h1>
+            <a href="#">
+                <img src="images/home.png" alt="Home"/>
+            </a>
+        </div>
 
-        Capture and Share the World's Moments
+        <div class="panHistoria">
 
-        Instagram is a fast, beautiful and fun way to share your life with friends and family.
+            <p>
+                Instagram is a fast, beautiful and fun way to share your life
+                with friends and family.
+            </p>
 
-        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that
-        easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            <p>
+                Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash;
+                it's  that easy. You can even share to Facebook, Twitter, Tumblr and more.
+                It's a new way to see the world.
+            </p>
 
-        Oh yeah, did we mention it's free?
+            <p>
+                Oh yeah, did we mention it's free?
+            </p>
 
-        Download on the App Store
-        Get it on Google Play
+
+            Download on the App Store
+            Get it on Google Play
+
+            <h2>Capture and Share the World's Moments</h2>
+        </div>
+
 
     </div>
-
 
 
 </main>
+<footer>
+    <ul class="linksFooter">
+        <li></li>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li>&copy; 2014 Instagram</li>
+    </ul>
+</footer>
 
-<ul class="linksFooter">
-    <li></li>
-    <li>About Us</li>
-    <li>Support</li>
-    <li>Blog</li>
-    <li>Press</li>
-    <li>API</li>
-    <li>Jobs</li>
-    <li>Privacy</li>
-    <li>Terms</li>
-
-    &copy; 2014 Instagram
-</ul>
 
 </body>
 </html>
