--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+  <head>
+    <title>Instagram</title>
+    <link rel="stylesheet" href="css/main.css" />
+  </head>
+  <body>
+    <header>
+    </header>
+    <section id="main">
+      <div class="container">
+        <div class="wrapper  wrapper--left">
+          <img
+            src="/starter-code/images/phones.png"
+            alt="iphone-img"
+            class="main-img"
+          />
+        </div>
+        <div class="wrapper  wrapper--right">
+          <div class="brand-and-login">
+            <img src="/starter-code/images/brand.png" alt="logo" class="logo" />
+            <a href="#" class="button"
+              ><img src="/starter-code/images/home.png" alt="home-pic" class="button__image" /> Log
+              in</a
+            >
+          </div>
+          <div class="clearfix"></div>
+          <div class="content">
+            <img src="/starter-code/images/frame.png" alt="frame" class="frame">
+            <h2 class="content__h">Capture and Share <br> the World's Moments</h2>
+            <p class="content__p"> Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
+              <br>
+              <br>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+              <br>
+              <br>Oh yeah, did we mention it's free?</p>
+          </div>
+          <div class="stores">
+            <a href="#" class="store-link"><img src="/starter-code/images/badge-iphone.png" alt="app-store" class="stores__img"></a>
+            <a href="#" class="store-link"><img src="/starter-code/images/badge-android.png" alt="play-store" class="stores__img"></a>
+          </div>
+        </div>
+        <footer>
+          <ul class="menu">
+            <li><a href="#" class="menu__item">About Us</a></li>
+            <li><a href="#" class="menu__item">Support</a></li>
+            <li><a href="#" class="menu__item">Blog</a></li>
+            <li><a href="#" class="menu__item">Press</a></li>
+            <li><a href="#" class="menu__item">API</a></li>
+            <li><a href="#" class="menu__item">Jobs</a></li>
+            <li><a href="#" class="menu__item">Privacy</a></li>
+            <li><a href="#" class="menu__item">Terms</a></li>
+          </ul>
+          <span class="copyright">&copy; 2014 Instagram</span>
+        </footer>
+      </div>
+    </section>
+  </body>
 </html>
