--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -4,19 +4,38 @@
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
+  <div id="blue-top" class="div"></div>
+  <div id="bottom-white" class="div">
+    <div id="iphone" class="div"></div>
+    <div id="text-and-links" class="div">
+      <div id="text-top" class="div">
+        <div id="instagram-logo"></div>
+        <button>Log In</button>
+      </div>
+      <div id="text-bottom" class="div">
+        <article>
+          <h1>Capture and Share the World's Moments</h1>
+          <p>
+            Instagram is a fast, beautiful and fun way to share your life with friends and family.
+          </p>
+          <p>
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          </p>
+          <p>
+            Oh yeah, did we mention it's free?
+          </p>
+          <div id="app-store-link" class="store-link">  
+            Download on the App Store
+          </div>
+          <div id="google-play-link" class="store-link">
+              Get it on Google Play
+          </div>
+        </article>
+      </div>
+    </div>
+  </div>
+</body>
+<footer>
   About Us
   Support
   Blog
@@ -27,5 +46,5 @@
   Terms
 
   &copy; 2014 Instagram
-</body>
+</footer>
 </html>
