--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
+  <div class="background-container"></div>
+    <div class="content">
+      <div class="content-left"></div>
+      <div class="content-right">           
+          <img class="insta-logo" src="images/brand.png" alt="Logo de instagram">
+          <a href="#" class="login"><img src="images/home.png" alt="" class="home-icon">
+            Log in</a>
+        
+        <div class="description-container">
+          <h2 class="description-title">Capture and Share the World's Moments</h2>
 
-  Capture and Share the World's Moments
+          <p>Instagram is a <strong>fast</strong> , <strong>beautiful</strong> and <strong>fun</strong>  way to share your life with friends and family.<br><br>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+          that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          <br>Oh yeah, did we mention it's free?</p>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+          <a href="#" class="button">
+            <img src="images/badge-iphone.png" alt="app store button" class="appstore">
+          </a>
+          <a href="#" class="button">
+            <img src="images/badge-android.png" alt="play sotre button" class="playstore">
+          </a>
+        </div>
+      </div>     
+    </div>
+    
+    <footer>
+      <nav class="nav-bar">
+        <ul class="nav-bar-ul">
+          <li class="nav-bar-li"><a href="" class="nav-bar-item">About us</a></li>
+          <li class="nav-bar-li"><a href="" class="nav-bar-item">Support</a></li>
+          <li class="nav-bar-li"><a href="" class="nav-bar-item">Blog</a></li>
+          <li class="nav-bar-li"><a href="" class="nav-bar-item">Press</a></li>
+          <li class="nav-bar-li"><a href="" class="nav-bar-item">API</a></li>
+          <li class="nav-bar-li"><a href="" class="nav-bar-item">Jobs</a></li>
+          <li class="nav-bar-li"><a href="" class="nav-bar-item">Privacy</a></li>
+          <li class="nav-bar-li"><a href="" class="nav-bar-item">Terms</a></li>
+          <li class="nav-bar-li"><a href="" class="nav-bar-item gray">© 2014 Instagram</a></li>
+        </ul>
+      </nav>
+    </footer>  
 </body>
+
 </html>
