--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+  <head>
+    <title>Instagram</title>
+    <link rel="stylesheet" href="css/main.css" type="text/css" />
+  </head>
+  <body>
+    <header>
+      <div class="title">Instagram</div>
+    </header>
+    <main>
+      <div class="image">
+        <img src="images/phones.png" alt="iPhone">
+      </div>
+      <div class="capture">
+        <h2>Capture and Share the World's Moments</h2>
+        <div class="text"></div>
+        Instagram is a <span>fast, beautiful</span> and <span>fun</span> way to
+        share your life with friends and family. Take a picture or video, choose
+        a filter to transform its look and feel, then post to Instagram &mdash;
+        it's that easy. You can even share to Facebook, Twitter, Tumblr and
+        more. It's a new way to see the world.
+        <br />
+        Oh yeah, did we mention it's free?
+        <br />
+        <button id="app-store">Download on the App Store</button>
+        <button id="play-store">Get it on Google Play</button>
+      </div>
+    </main>
+    <div class="clearfix"></div>
+    <footer>
+      <div class="links">
+        <ul>
+          <li><a href="#" class="about">About Us</a></li>
+          <li><a href="#" class="about">Support</a></li>
+          <li><a href="#" class="about">Blog</a></li>
+          <li><a href="#" class="about">Press</a></li>
+          <li><a href="#" class="about">API</a></li>
+          <li><a href="#" class="about">Jobs</a></li>
+          <li><a href="#" class="about">Privacy</a></li>
+          <li><a href="#" class="about">Terms</a></li>
+          <li><a href="#">&copy; 2014 Instagram</a></li>
+        </ul>
+      </div>
+    </footer>
+  </body>
 </html>
