--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -5,29 +5,36 @@
     <link rel="stylesheet" href="css/main.css" type="text/css" />
   </head>
   <body>
-    <header>
-      <div class="title">Instagram</div>
-    </header>
+    <header></header>
     <main>
       <div class="image">
-        <img src="images/phones.png" alt="iPhone">
+        <img src="images/phones.png" alt="iPhone" />
+      </div>
+      <div class="upper-buttons">
+        <img src="images/brand.png" alt="Instagram" />
+        <a href="#" class="log-in-button">Log in</a>
       </div>
       <div class="capture">
         <h2>Capture and Share the World's Moments</h2>
         <div class="text"></div>
         Instagram is a <span>fast, beautiful</span> and <span>fun</span> way to
-        share your life with friends and family. Take a picture or video, choose
+        share your life with friends and family. <br><br> Take a picture or video, choose
         a filter to transform its look and feel, then post to Instagram &mdash;
         it's that easy. You can even share to Facebook, Twitter, Tumblr and
         more. It's a new way to see the world.
-        <br />
+        <br /><br />
         Oh yeah, did we mention it's free?
         <br />
-        <button id="app-store">Download on the App Store</button>
-        <button id="play-store">Get it on Google Play</button>
+        <div class="app-store">
+          <img src="images/badge-iphone.png" alt="Download on the App Store" />
+        </div>
+        <div class="play-store">
+          <img src="images/badge-android.png" alt="Get it on Google Play" />
+        </div>
       </div>
+
+      <div class="clearfix"></div>
     </main>
-    <div class="clearfix"></div>
     <footer>
       <div class="links">
         <ul>
