ya puse los botones, sigue al ultimo boton

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
 
         <div class="panHistoria">
 
+            <h2>Capture and Share the World's Moments</h2>
             <p>
                 Instagram is a fast, beautiful and fun way to share your life
                 with friends and family.
@@ -36,7 +37,7 @@
 
             <p>
                 Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash;
-                it's  that easy. You can even share to Facebook, Twitter, Tumblr and more.
+                it's that easy. You can even share to Facebook, Twitter, Tumblr and more.
                 It's a new way to see the world.
             </p>
 
@@ -45,10 +46,16 @@
             </p>
 
 
-            Download on the App Store
-            Get it on Google Play
+            <div class="panContenedorFlex">
+                <a href="#">
+                    <img alt="Download on the App Store" src="images/badge-iphone.png/">
+                </a>
+                <span id="separadorImagesLink"></span>
+                <a href="#">
+                    <img alt="Get it on Google Play" src="images/badge-android.png"/>
+                </a>
+            </div>
 
-            <h2>Capture and Share the World's Moments</h2>
         </div>
 
 
