ya esta el boton de inicio

--- a/public/index.html
+++ b/public/index.html
@@ -18,13 +18,21 @@
 
     <div>
 
-        <div class="panContenedorFlex panImagenesTop">
+        <div class="panContenedorFlex panImagenesTop"
+             style="">
             <h1>
-                <img src="images/brand.png" alt="Instagram"/>
+                <img src="images/brand.png" alt="Instagram"
+                    />
             </h1>
-            <a href="#">
-                <img src="images/home.png" alt="Home"/>
-            </a>
+            <div style="padding-top: 25px; margin-left: 30px">
+                <a href="#"
+                   class="btn-icon bg-icon-home"
+                   style=" border:1px solid green;"
+                >
+                    Log in
+                </a>
+            </div>
+
         </div>
 
         <div class="panHistoria">
