finalizado el boton inicio

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Instagram</title>
     <link rel="stylesheet" href="css/main.css"/>
 </head>
 <body>
@@ -24,11 +24,9 @@
                 <img src="images/brand.png" alt="Instagram"
                     />
             </h1>
-            <div style="padding-top: 25px; margin-left: 30px">
+            <div style="padding-top: 28px; margin-left: 30px;">
                 <a href="#"
-                   class="btn-icon bg-icon-home"
-                   style=" border:1px solid green;"
-                >
+                   class="btn-icon bg-icon-home">
                     Log in
                 </a>
             </div>
