--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <title>Apple Pie Recipe</title>
+        <link rel="stylesheet" href="css/main.css"> 
+      </head>
 <head>
   <title>Instagram</title>
 </head>
+<header id="blue-top"></header>
 <body>
-  <div id="blue-top" class="div"></div>
   <div id="bottom-white" class="div">
     <div id="iphone" class="div"></div>
     <div id="text-and-links" class="div">
