Avance todo lo que pude

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="./css/main.css">
+
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="bluediv"></div>
+  <div class="whitediv">
+    <img  class="main-content telefonos" src="main-content" src="./images/phones.png" alt="Phones" >
+  <div class="maint-content brand">
+      <img src="main-content" src="./images/brand.png" alt="Logo Instagram" >
+      <div class="logIn">
+      <img class="main-content" src="./images/home.png" alt="Home">
+      <p>Login</p>
+      </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <img class="frame" src="./images/frame.png" alt="Frame">
+    </div>
+    <div class="textoprincipal">
+      <h1>Capture and Share<br>the World's Moments</h1>
+      <p>Instagram is a <strong>fast beutiful</strong>, and <strong>fun</strong> way to share your life with friends and family.<br><br>
+      Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br><br>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      Oh yeah, did we mention it's free?</p>
+      <img class="download" src="./images/badge-iphone.png" alt="Download iPhone">
+      <img class="download" src="./images/badge-android.png" alt="Download Android">
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    </div>
+  </div>
+  <footer>
+      <ul class="lista">
+        <li class= "enLinea"> ABOUT US</li>
+        <li class= "enLinea">SUPPORT</li>
+        <li class= "enLinea">BLOG</li>
+        <li class= "enLinea">PRESS</li>
+        <li class= "enLinea">API</li>
+        <li class= "enLinea">JOBS</li>
+        <li class= "enLinea">PRIVACY</li>
+        <li class= "enLinea">TERMS</li>
+        <li class= "enLinea">&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
+  
 </body>
+
 </html>
