--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+  <link rel="stylesheet" href="css/main.css">
   <title>Instagram</title>
 </head>
+
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="container1">
+    <div class="background-blue"></div>
+    <img src="images/phones.png" alt="phone image" id="phone">
+    <div class="container2">
+      <img src="images/brand.png" alt="Instagram logo" id="logo">
+      <button><img src="images/home.png" alt=""> Log in</button>
+      <div>
+        <h1>Capture and Share the World's Moments</h1>
+        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+          that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+        <a href="#" target="_blank"><img src="images/badge-iphone.png" alt="app store link"></a>
+        <a href="#" target="_blank"><img src="images/badge-android.png" alt="google play store link"></a>
+      </div>
+    </div>
+  </div>
+  <footer>
+    <a href="#" target="_blank">about us</a>
+    <a href="#" target="_blank">Support</a>
+    <a href="#" target="_blank">Blog</a>
+    <a href="#" target="_blank">Press</a>
+    <a href="#" target="_blank">API</a>
+    <a href="#" target="_blank">Jobs</a>
+    <a href="#" target="_blank">Privacy</a>
+    <a href="#" target="_blank">Terms</a>
+    <span>&copy; 2014 Instagram</span>
+  </footer>
 </body>
+
 </html>
