--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <div class="wrapper">
+  <div class="left">
+    <img src="images/phones.png" alt="Phones for IG" title="Phones for IG">
+  </div>
+  <div class="right">
+  <div>
+    <img src="images/brand.png" alt="Instagram" title="Instagram">
+    <button class="bluebutton"><img src="images/home.png"> Log In</button>
+  </div>
+  <div id="frame">
+  <h2>Capture and Share the World's Moments</h2>
 
-  Capture and Share the World's Moments
+  <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+<p>Oh yeah, did we mention it's free?</p>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <img href="_blank" src="images/badge-iphone.png" alt="Download on the App Store" title="Download on the App Store">
+  <img href="_blank" src="images/badge-android.png" alt="Get it on Google Play" title="Get it on Google Play"> 
+</div>
+</div>
+</div>
+  <footer>
+    <ul>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+      <li>&copy; 2014 Instagram</li>
+      </ul>
+</footer>
 </body>
 </html>
