--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,49 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  Instagram
+<div id="fullpic">
+   <div class="box-left">
+ <img src="images/phones.png" alt="phones pic">
+  </div>
+  <div class="box-right box-text">
+    <img src="images/brand.png" alt="brand pic">
+    <h2>Capture and Share the World's Moments</h2>
 
-  Capture and Share the World's Moments
+  <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
+  <p>Oh yeah, did we mention it's free?</p> 
   Download on the App Store
   Get it on Google Play
+  </div>
+  
+ </div>
+  
+  
+  
+   
+ 
+  
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <footer>
+
+  <ul class="links">
+  
+  <li>About Us</li>
+  <li>Support</li>
+  <li>Blog</li>
+  <li>Press</li>
+  <li>API</li>
+  <li>Jobs</li>
+  <li>Privacy</li>
+  <li>Terms</li>
+</ul>
 
   &copy; 2014 Instagram
+  </footer>
 </body>
 </html>
