--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
+  <head>
+    <title>Instagram</title>
+    <link rel="stylesheet" href="css/main.css" />
+  </head>
+  <body>
+    <img class="phones" src="images/phones.png" alt="phones" />
+    <div class="container">
+      <div class="logos">
+        <img src="images/brand.png" alt="  Instagram" />
+        <button><img src="images/home.png" alt="home" />Log in</button>
+      </div>
 
-  Capture and Share the World's Moments
+      <div class="texto">
+        <h1>
+          Capture and Share <br />
+          the World's Moments
+        </h1>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <p>
+          Instagram is a <span>fast</span>, <span>beautiful</span> and
+          <span>fun</span> way to share your life <br />
+          with friends and family.
+        </p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <p>
+          Take a picture or video, choose a filter to transform its look <br />
+          and feel, then post to Instagram &mdash; it's that easy. You can
+          <br />
+          even share to Facebook, Twitter, Tumblr and more. It's a <br />
+          new way to see the world.
+        </p>
 
-  Oh yeah, did we mention it's free?
+        <p>Oh yeah, did we mention it's free?</p>
 
-  Download on the App Store
-  Get it on Google Play
+        <img src="images/badge-iphone.png" alt="Download on the App Store" />
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+        <img src="images/badge-android.png" alt="Get it on Google Play" />
+      </div>
+    </div>
+    <footer>
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li>&copy;2014 Instagram</li>
+      </ul>
+    </footer>
+  </body>
 </html>
