--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
+
 <body>
-  Instagram
+  <!--container-->
+  <div class="container">
+    <div class="box-left">
+      <img src="images/phones.png" alt="phones">
+    </div>
 
-  Capture and Share the World's Moments
+    <div class="box-right">
+      <img src="images/brand.png" alt="brand">
+      <section>
+        <h2>Capture and Share the World's Moments</h2>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+          that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Oh yeah, did we mention it's free?
+        <p>Oh yeah, did we mention it's free?</p>
+      </section>
 
-  Download on the App Store
-  Get it on Google Play
+      <img src="images/badge-android.png" alt="android">
+      <img src="images/badge-iphone.png" alt="iphone">
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+    </div>
 
-  &copy; 2014 Instagram
+    <ul>
+      <li><a href="">About Us</a></li>
+      <li><a href="">Support</a></li>
+      <li><a href="">Blog</a></li>
+      <li><a href="">Press</a></li>
+      <li><a href="">API</a></li>
+      <li><a href="">Jobs</a></li>
+      <li><a href="">Privacy</a></li>
+      <li><a href="">Terms</a></li>
+      <li>&copy; 2014 Instagram</li>
+    </ul>
+  </div>
 </body>
+
 </html>
