--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   Instagram
-
+prueba
   Capture and Share the World's Moments
 
   Instagram is a fast, beautiful and fun way to share your life with friends and family.
