Instagram clone finished

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <title>Instagram</title>
+    <title>Instagram</title>
+    <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
+
 <body>
-  Instagram
+    <div class="blue-background">
+    </div>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    <div class="wrapper">
+        <div class="flex-container">
+            <div class="flex-picture">
+                <img id="image" src="./images/phones.png" alt="iphone picture">
+            </div>
+            <div class="flex-content">
+                <div>
+                    <img class="logo" src="./images/brand.png" alt="brand.png" />
+                    <button class="log-in">
+                        <img id="home-img" src="./images/home.png" alt="home.png" /> Log in
+                    </button>
+                </div>
+                <section class="content">
+                    <h1>
+                        Capture and Share the World's Moments
+                    </h1>
+                    <p> Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+                    <p> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. </p>
+                    <p>Oh yeah, did we mention it's free?</p>
+                    <div class="buttons">
+                        <img src="./images/badge-iphone.png" alt="badge-iphone.png" />
+                        <img src="./images/badge-android.png" alt="badge-android.png" />
+                    </div>
+                </section>
+            </div>
+        </div>
+    </div>
 </body>
+<footer>
+    <ul>
+        <li>ABOUT US</li>
+        <li>SUPPORT</li>
+        <li>BLOG</li>
+        <li>PRESS</li>
+        <li>API</li>
+        <li>JOBS</li>
+        <li>PRIVACY</li>
+        <li>TERMS</li>
+        <li>2014 INSTAGRAM</li>
+    </ul>
+</footer>
+
 </html>
