--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" type="text/css" href="../starter-code/css/main.css" />
   <title>Instagram</title>
 </head>
+
 <body>
-  Instagram
+    <section class="centered-section">
+    <div class="left-content">
+      <img src="images/phones.png" alt="Phones">
+    </div>
+    <div class="right-content">
+      <div class="right-upper-content">
+      <img src="images/brand.png" alt="Phones">
+      <button class="button-logIn"><img src="images/home.png ">Log In</button>
+      </div>
+      <div class="right-content-box">
+        <h2>Capture and Share the World's Moments</h2>
+        <p>Instagram is a <span class="boldSpan">fast</span>, <span class="boldSpan">beautiful</span> and <span class="boldSpan"> fun</span> way to share your life with friends and family.</p>
 
-  Capture and Share the World's Moments
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+          that
+          easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <p>Oh yeah, did we mention it's free?</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <img src="images/badge-iphone.png" alt="badge Apple">
+        <img src="images/badge-android.png" alt="badge Android">
+      </div>
+    </div>
+    
+  </section>
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
-  &copy; 2014 Instagram
+  <section class="footer-content">
+    <ul class="footer-links">
+      <li><a href=>About Us</a></li>
+      <li><a href=>Support</a></li>
+      <li><a href=>Blog</a></li>
+      <li><a href=>Press</a></li>
+      <li><a href=>API</a></li>
+      <li><a href=>Jobs</a></li>
+      <li><a href=>Privacy</a></li>
+      <li><a href=>Terms</a></li>
+      <li class="copyright">&copy; 2014 Instagram</li>
+    </ul>
+    
+  </section>
 </body>
+
 </html>
