--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,64 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
-prueba
+    <section class="container">
+      <div class="phone-div">
+        <img src="images/phones.png" alt="phones" class="phones">
+      </div>
+  
+<div class="content">
+  <img src="images/brand.png" alt="logo">
+  <div class="home">
+    <img src="images/home.png" alt="home" >
+  </div>
+  
+  <div class="center-text">
+    <div class="frame-text">
+  <h2>
   Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
+  </h2>
+  
+  <p>
+  Instagram is a <span> fast beautiful</span> and <span>fun</span> way to share your life with friends and family.
+  </p>
+  
+  <p>
+  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy.
+  You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  </p>
+  
+  <p>
   Oh yeah, did we mention it's free?
+  </p>
+  </div>
+</div>
 
-  Download on the App Store
-  Get it on Google Play
+  <div class="button iphone">
+     <img src="images/badge-iphone.png" alt="Download on the App Store"> 
+  </div>
+  <div class="button android">
+   <img src="images/badge-android.png" alt=" Get it on Google Play">
+  </div>
+</div>
+</section>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <ul>
+    <li>About Us</li>
+    <li>Support</li>
+    <li>Blog</li>
+    <li>Press</li>
+    <li>API</li>
+    <li>Jobs</li>
+    <li>Privacy</li>
+    <lil>Terms</lil>
+  
+<li>
+	
+	  &copy; 2014 Instagram
+</li>
+</ul>
 </body>
 </html>
